Fix layout bug in styling of glass buttons

--- a/hyperlink.less
+++ b/hyperlink.less
@@ -417,6 +417,7 @@
 	.recommend-button,
 	.glass-button {
 		display: block;
+		position: relative;
 	}
 }
 
